    - [x86] sev: Skip ROM range scans and validation for SEV-SNP guests
    - USB: core: Fix deadlock in usb_deauthorize_interface()
    - tools/resolve_btfids: fix build with musl libc

  [ Salvatore Bonaccorso ]
  * Bump ABI to 20
  * Refresh "efi: Lock down the kernel if booted in secure boot mode" (context
    changes in 6.1.84)

 -- Salvatore Bonaccorso <carnil@debian.org>  Mon, 01 Apr 2024 21:14:46 +0200

linux (6.1.82-1) bookworm; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v6.x/ChangeLog-6.1.77
    - asm-generic: make sparse happy with odd-sized put_unaligned_*()
    - [powerpc*] mm: Fix null-pointer dereference in pgtable_cache_add
    - [arm64] irq: set the correct node for VMAP stack
    - [arm64] drivers/perf: pmuv3: don't expose SW_INCR event in sysfs
    - [powerpc*] Fix build error due to is_valid_bugaddr()
    - [powerpc*] mm: Fix build failures due to arch_reserved_kernel_pages()
    - [x86] boot: Ignore NMIs during very early boot
    - [powerpc*] pmd_move_must_withdraw() is only needed for
      CONFIG_TRANSPARENT_HUGEPAGE
    - [powerpc*] lib: Validate size for vector operations
    - [x86*] mce: Mark fatal MCE's page as poison to avoid panic in the kdump
      kernel
    - perf/core: Fix narrow startup race when creating the perf nr_addr_filters
      sysfs file
    - debugobjects: Stop accessing objects after releasing hash bucket lock
    - regulator: core: Only increment use_count when enable_count changes
    - audit: Send netlink ACK before setting connection in auditd_set
    - ACPI: video: Add quirk for the Colorful X15 AT 23 Laptop
    - PNP: ACPI: fix fortify warning
    - ACPI: extlog: fix NULL pointer dereference check
    - ACPI: NUMA: Fix the logic of getting the fake_pxm value
    - PM / devfreq: Synchronize devfreq_monitor_[start/stop]
    - ACPI: APEI: set memory failure flags as MF_ACTION_REQUIRED on synchronous
      events